name:                blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nodew/blog#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Wang
maintainer:          wangqiao11@hotmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable blog
  main-is:             main.hs
  hs-source-dirs:      hakyll/app
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       blog

library
  ghc-options:         -threaded
  hs-source-dirs:      hakyll/lib
  build-depends:       base >= 4.7 && < 5
                     , hakyll
  exposed-modules:     BlogRules