name:                blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nodew/blog#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Wang
maintainer:          wangqiao11@hotmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable blog
  main-is:             site.hs
  hs-source-dirs:      hakyll
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , hakyll
                     , mtl
                     , pandoc